feat: added postgres support and updated docs
